[project]
name = "volo-agent"
version = "0.1.0"
description = " "
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cdp-sdk>=1.39.1,<2",
    "dnspython>=2.8.0",
    "fastapi[standard]>=0.135.3",
    "httpx>=0.27.0",
    "langchain>=1.2.10",
    "langchain-cohere>=0.5.0",
    "langchain-core>=1.2.17",
    "langchain-google-genai>=4.2.1",
    "langchain-huggingface>=1.2.1",
    "langgraph>=1.0.10",
    "motor>=3.5.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "solana>=0.36.11",
    "upstash-redis>=1.6.0",
    "web3>=7.6.0,<=7.10.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=0.23.8",
    "pytest-xdist>=3.8.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    "ignore::RuntimeWarning",
    "ignore::DeprecationWarning",
]
